Rework S9 for ADR-0031 and ADR-0033: derived settings, memory-budget admission, heap and temp-table evidence
S9 now derives every connector setting from each table's exact maximum
row size M, admits boxes largest-first under the box cap and the platform
memory budget, and checks each post-GC heap figure against the idle
worker plus the running boxes' reservations R. It also records component
RSS and the source's temp-table peaks.

The lab Compose gains ADR-0032's restart policy and exit-on-OOM flag,
tier heaps via e2e/bulk/set-tier.sh, and a Connect GC log. Artifacts can
live outside the rsynced workspace through ART_ROOT.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>